# EmbeddedScripting

./: CMakeLists.txt  EmbeddedScripting.i  Feasibility.md  README.md  RubyException.hpp  RubyInterpreter.hpp  embedded_files.hpp  i386-mingw32.patch  main.cpp  test.rb  test2.rb  test3.rb  x64-mingw32.patch
